--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 /*
- Theme Name:   Understrap Child
- Theme URI:    https://understrap.com
- Description:  Understrap Child Theme
- Author:       the Understrap Contributors
- Author URI:   https://github.com/understrap/understrap-child/graphs/contributors
- Template:     understrap
- Version:      1.0.1
- License: GNU General Public License v2 or later
- License URI: http://www.gnu.org/licenses/gpl-2.0.html
- Text Domain:  understrap-child
- Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
- GitHub Theme URI: understrap/understrap-child
-*/
+Theme Name: Rustico Restaurant Theme
+Theme URI: https://understrap.com
+Author: Steven Park & Naomi Spirit
+Author URI: https://howarddc.com
+GitHub Theme URI: https://github.com/understrap/understrap
+Description: A custom theme developed for Rustico Restaurant in Aberdeen.
+Version: 1.0.1
+Requires at least: 5.0
+Tested up to: 5.8
+Requires PHP: 5.2
+License: GNU General Public License v3 or later
+License URI: http://www.gnu.org/licenses/gpl-3.0.html
+Text Domain: understrap
+Tags: one-column, two-columns, three-columns, left-sidebar, right-sidebar, custom-background, custom-logo, custom-menu, featured-images, footer-widgets, full-width-template, theme-options, translation-ready */
