Flag parent theme to child theme

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ Theme Name: Rustico Restaurant Theme
 Theme URI: https://understrap.com
 Author: Steven Park & Naomi Spirit
 Author URI: https://howarddc.com
+Template: understrap
 GitHub Theme URI: https://github.com/understrap/understrap
 Description: A custom theme developed for Rustico Restaurant in Aberdeen.
 Version: 1.0.1
