--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -1,3 +1,8 @@
+// Main Container
+#content {
+    background: rgba(#fff, 0.65);
+}
+
 // Navbar
 .navbar-dark .navbar-toggler {
     border-color: #fff;
