--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -9,3 +9,10 @@ $secondary: $yellow;
 $light: #fff99f;
 
 $navbar-dark-color: #fff;
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 960px
+);
