Social Menu items fix

--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -154,7 +154,8 @@ iframe {
 }
 
 // Social Icons
-#main-menu li a[href^="http"] {
+#main-menu li a[href*="facebook"],
+#main-menu li a[href*="instagram"] {
     display: inline-block;
     margin: 0.5em;
     width: 28px;
