--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -145,8 +145,8 @@ $contrain-large: 46rem;
 
 // Content Block Component
 .content-block {
-    background: #fffef4;
-    color: #000;
+    background: $light;
+    color: $black;
     margin-left: -15px;
     margin-right: -15px;
     .wp-block-columns {
@@ -224,12 +224,14 @@ iframe {
 
 // Footer
 footer.with-full-width {
-    background: linear-gradient(rgba(#e7cf01, 95%) 0, rgba(#ffea2a, 65%) 100%);
-    color: #000;
+    background: $light;
+    // background: linear-gradient(rgba(#e7cf01, 95%) 0, rgba(#ffea2a, 65%) 100%);
+    color: $black;
     a:not(.wp-block-button__link) {
-        color: #000;
+        color: $black;
     }
     .wp-block-table table {
+		color: inherit;
         td, th {
             border-color: rgba(#000, 50%);
         }
