Menu output and font tweak

--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -26,6 +26,7 @@ $font-family-sans-serif: 'Zen Kaku Gothic Antique', -apple-system, BlinkMacSyste
 $headings-font-family:   $font-family-display;
 $font-family-base:       $font-family-sans-serif;
 $font-weight-bolder:     bold;
+$headings-font-weight:   $font-weight-bolder;
 
 $font-size-base:         1.1rem;
 $font-size-lg:           $font-size-base * 1.3;
