--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -2,7 +2,8 @@
 // To overwrite a Bootstrap variable you don´t have to touch the Bootstrap folder.
 // Just copy a variable from src/sass/bootstrap4/_variables.scss, paste it here and edit the value.
 
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@400;700&family=Zen+Old+Mincho:wght@900&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@400;700&family=Zen+Old+Mincho:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 
 $red: #750e2d;
 $primary: $red;
@@ -20,8 +21,10 @@ $container-max-widths: (
   xl: 960px
 );
 
-$font-family-display:    'Zen Kaku Gothic Antique', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-$font-family-sans-serif: 'Zen Kaku Gothic Antique', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+// $font-family-display:    'Zen Kaku Gothic Antique', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+// $font-family-sans-serif: 'Zen Kaku Gothic Antique', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-display: 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+$font-family-sans-serif: 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 
 $headings-font-family:   $font-family-display;
 $font-family-base:       $font-family-sans-serif;
@@ -38,3 +41,6 @@ $body-bg:                $primary;
 
 $input-btn-padding-y: 0.5rem;
 $input-btn-padding-x: 2rem;
+
+$btn-border-radius: 0;
+$btn-border-width: 2px;
