--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -91,8 +91,8 @@ html {
 
 .with-spacing {
     padding: 1rem;
-    margin-top: 64px;
-    margin-bottom: 64px;
+    // margin-top: 64px;
+    // margin-bottom: 64px;
     @include media-breakpoint-down(sm) {
         padding: 3rem 1rem;
     }
