--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -31,12 +31,13 @@ $font-family-base:       $font-family-sans-serif;
 $font-weight-bolder:     bold;
 $headings-font-weight:   $font-weight-bolder;
 
-$font-size-base:         1.1rem;
+$font-size-base:         1rem;
 $font-size-lg:           $font-size-base * 1.3;
 $font-size-sm:           $font-size-base * .875;
 
 $body-color:           #fff;
 $body-bg:                $primary;
+$text-muted:             $gray-100;
 
 
 $input-btn-padding-y: 0.5rem;
