--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -11464,11 +11464,11 @@ html {
   color: #fff;
 }
 .navbar.navbar-dark .nav-link:focus, .navbar.navbar-dark .nav-link:hover {
-  color: #fff461;
+  color: #e0c800;
 }
 .navbar.navbar-dark .active > .nav-link,
 .navbar.navbar-dark .nav-link.active {
-  color: #fff461;
+  color: #e0c800;
   font-weight: bold;
   text-decoration: underline;
   text-decoration-thickness: 2px;
@@ -11564,7 +11564,7 @@ html {
 }
 
 .content-block {
-  background: #fffef4;
+  background: #fffce0;
   color: #000;
   margin-left: -15px;
   margin-right: -15px;
@@ -11624,7 +11624,7 @@ iframe {
 }
 
 footer.with-full-width {
-  background: #fffef4;
+  background: #fffce0;
   color: #000;
 }
 footer.with-full-width a:not(.wp-block-button__link) {
@@ -11637,16 +11637,40 @@ footer.with-full-width .wp-block-table table td, footer.with-full-width .wp-bloc
   border-color: rgba(0, 0, 0, 0.5);
 }
 
+.btn-primary {
+  color: #343a40;
+  background-color: #e0c800;
+  border-color: #e0c800;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary.focus {
+  color: #343a40;
+  background-color: #ffe300;
+  border-color: #ffe300;
+}
+
+.btn-primary.disabled, .btn-primary:disabled {
+  color: #750e2d;
+  background-color: #fffce0;
+  border-color: #fffce0;
+}
+
+.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
+  color: #750e2d;
+  background-color: #fffce0;
+  border-color: #fffce0;
+}
+
 #main-menu li.active a {
   text-decoration: none;
-  color: #fff461;
+  color: #e0c800;
 }
 #main-menu li.active a li:not(.active) a {
-  color: #fffef4;
+  color: #fffce0;
 }
 #main-menu a:hover {
   text-decoration: none;
-  color: #fff461;
+  color: #e0c800;
   background: none;
 }
 #main-menu .dropdown-menu {
